移植快捷槽注册表与预览语义到 1.12.2